--- a/index.html
+++ b/index.html
@@ -9,27 +9,38 @@
   <title>Instagram</title>
 </head>
 <body>
-  <main class="instagram-main">
+  <main class="instagram-main">   
+    <!--Primeira seção imagens do celular-->
     <figure class="instagram-fone">
-      <img src="img/instagram-celular.png" alt="Celular Instagram">
+      <img src="img/celular2.png" alt="Celular Instagram">
+      <img class="celular-topo" src="img/instagram-celular.png" alt="Celular Instagram">
     </figure>
+    <!--Segunda seção área de login-->
     <section class="instagram-login">
       <div class="login-div">
         <figure id="logo">
           <img src="img/instagram-logo.png" alt="Logo Instagram">
         </figure>
-        <form action="">
-          <input type="text" name="conta-login" id="conta-login">
-          <input type="password" name="password-login" id="password-login">
+        <form class="formulario-login"action="">
+          <input class="input-login" type="text" name="conta-login" id="conta-login" placeholder="Entre com email ou telefone">
+          <input class="input-login" type="password" name="password-login" id="password-login" placeholder="Senha">
+          <input id="input-button" type="button" value="Entrar">
         </form>
         <p>OU</p>
-        <a href="#"><img src="">Entrar com o Facebook</a>
+        <div class="login-face">
+          <img src="img/social-facebook-box-blue-icon.png">
+          <a href="#">Entrar com o Facebook</a>
+        </div>
       </div>
       <div class="login-div">
-
+        <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
       </div>
       <div class="buttom-app">
-
+        <p>Obtenha o aplicativo.</p>
+        <figure class="figuras-app">
+          <img src="img/apple-button.png" alt="Botão AppleStore">
+          <img src="img/googleplay-button.png" alt="Botão GooglePlay">
+        </figure>
       </div>
     </section>
   </main>
