conclusão do projeto, alteração no linear gradiente, lodo do facebook e na cor do placeholder nos inputs.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
           <input class="input-login" type="password" name="password-login" id="password-login" placeholder="Senha">
           <input id="input-button" type="button" value="Entrar">
         </form>
-        <p>OU</p>
+        <div class="or-login">
+          <p>OU</p>
+        </div>
         <div class="login-face">
-          <img src="img/social-facebook-box-blue-icon.png">
+          <img src="img/facebook.png">
           <a href="#">Entrar com o Facebook</a>
         </div>
       </div>
